--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAPERHOUSE INC | Pro Portal</title>
+    <title>PAPERHOUSE INC | Premium</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Monetag SDKs -->
@@ -13,130 +14,170 @@
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
 
     <style>
-        body { background: #0f172a; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); border-radius: 15px; }
-        .nav-btn { transition: 0.3s; text-transform: uppercase; font-weight: bold; padding: 20px; text-align: center; cursor: pointer; }
-        .nav-btn:hover { background: rgba(255,255,255,0.1); transform: scale(1.02); }
+        body { background: #020617; color: #f8fafc; font-family: 'Inter', sans-serif; overflow-x: hidden; }
+        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.08); border-radius: 24px; }
+        .neon-border-blue { border: 1px solid rgba(59, 130, 246, 0.5); box-shadow: 0 0 15px rgba(59, 130, 246, 0.2); }
+        .nav-card { transition: all 0.3s ease; cursor: pointer; position: relative; overflow: hidden; }
+        .nav-card:hover { transform: translateY(-5px); background: rgba(255,255,255,0.08); }
         .hidden { display: none; }
-        .active-page { display: block !important; }
-        ::-webkit-scrollbar { width: 5px; }
-        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
+        ::-webkit-scrollbar { width: 4px; }
+        ::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 10px; }
     </style>
 </head>
-<body class="p-4">
+<body class="p-4 max-w-2xl mx-auto">
 
-    <!-- TOP BAR -->
-    <div class="max-w-4xl mx-auto flex justify-between items-center p-4 glass mb-6">
+    <!-- FAST REAL-TIME HEADER -->
+    <header class="glass p-6 mb-6 flex justify-between items-center neon-border-blue">
         <div>
-            <h1 class="text-xl font-black text-blue-500">PAPERHOUSE INC.</h1>
-            <p id="display-username" class="text-xs text-green-400">@loading...</p>
+            <h1 class="text-2xl font-black tracking-tighter text-blue-500">PAPERHOUSE</h1>
+            <div class="flex items-center gap-2">
+                <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
+                <p id="tg-username" class="text-xs font-mono text-slate-400">Fetching Telegram...</p>
+            </div>
         </div>
         <div class="text-right">
-            <p class="text-[10px] uppercase opacity-50">Total Balance</p>
-            <p class="text-2xl font-bold text-yellow-400">₱<span id="bal-val">0.000</span></p>
+            <p class="text-[10px] uppercase text-slate-500 font-bold">Balance</p>
+            <p class="text-2xl font-black text-yellow-400">₱<span id="bal-val">0.000</span></p>
         </div>
-    </div>
+    </header>
 
-    <!-- MAIN MENU -->
-    <div id="page-main" class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div onclick="showPage('page-elem')" class="nav-btn glass border-blue-500/50">📘 ELEMENTARY CHAT 📘</div>
-        <div onclick="showPage('page-high')" class="nav-btn glass border-green-500/50">📗 HIGHSCHOOL CHAT 📗</div>
-        <div onclick="showPage('page-leaderboard')" class="nav-btn glass border-yellow-500/50">🍺 TOP LEADERBOARD 🍺</div>        <div onclick="showPage('page-daily')" class="nav-btn glass border-purple-500/50">📅 DAILY LOGIN 📅</div>
-        <div onclick="showPage('page-referral')" class="nav-btn glass border-pink-500/50">🍺 REFERRALS 🍺</div>
-        <div onclick="showPage('page-withdraw')" class="nav-btn glass border-red-500/50 text-red-400">🤑 WITHDRAW 🤑</div>
-        <div onclick="showPage('page-owner')" class="nav-btn glass border-gray-500/50 text-xs mt-4 col-span-full">🎖️ OWNER DASHBOARD</div>
-        <div onclick="checkAdminLinks()" class="nav-btn glass border-white/20 text-[10px] col-span-full py-2">UPDATED LINKS</div>
-    </div>
+    <!-- MAIN NAVIGATION -->
+    <main id="main-menu" class="grid grid-cols-2 gap-4">
+        <div onclick="nav('page-elem')" class="nav-card glass p-6 text-center border-blue-500/30">            <div class="text-2xl mb-2">📘</div>
+            <p class="text-xs font-bold uppercase">Elementary</p>
+        </div>
+        <div onclick="nav('page-high')" class="nav-card glass p-6 text-center border-green-500/30">
+            <div class="text-2xl mb-2">📗</div>
+            <p class="text-xs font-bold uppercase">Highschool</p>
+        </div>
+        <div onclick="nav('page-leaderboard')" class="nav-card glass p-6 text-center border-yellow-500/30">
+            <div class="text-2xl mb-2">🏆</div>
+            <p class="text-xs font-bold uppercase">Leaderboard</p>
+        </div>
+        <div onclick="nav('page-daily')" class="nav-card glass p-6 text-center border-purple-500/30">
+            <div class="text-2xl mb-2">📅</div>
+            <p class="text-xs font-bold uppercase">Daily Tasks</p>
+        </div>
+        <div onclick="nav('page-referral')" class="nav-card glass p-6 text-center border-pink-500/30">
+            <div class="text-2xl mb-2">🍺</div>
+            <p class="text-xs font-bold uppercase">Referrals</p>
+        </div>
+        <div onclick="nav('page-withdraw')" class="nav-card glass p-6 text-center border-red-500/30">
+            <div class="text-2xl mb-2 text-red-500">🤑</div>
+            <p class="text-xs font-bold uppercase text-red-400">Withdraw</p>
+        </div>
+        <button onclick="nav('page-owner')" class="col-span-2 glass p-3 text-[10px] uppercase opacity-50 hover:opacity-100 transition">🎖️ Owner Dashboard</button>
+        <button onclick="checkAdminLinks()" class="col-span-2 glass p-2 text-[8px] uppercase opacity-30">Updated Links (Admin)</button>
+    </main>
 
-    <!-- ELEMENTARY PAGE -->
-    <div id="page-elem" class="hidden max-w-4xl mx-auto">
-        <button onclick="showPage('page-main')" class="mb-4 text-sm"><i class="fa fa-arrow-left"></i> Back</button>
-        <div class="glass h-96 overflow-y-auto p-4 mb-4" id="elem-chat-box">
-            <table class="w-full text-sm"><tbody id="elem-chat-content"></tbody></table>
+    <!-- ELEMENTARY CHAT -->
+    <section id="page-elem" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50"><i class="fa fa-chevron-left"></i> BACK</button>
+        <div class="glass h-96 overflow-y-auto p-4 mb-4" id="elem-chat-container">
+            <div id="elem-chat-content" class="space-y-3"></div>
         </div>
         <div class="flex gap-2">
-            <input id="elem-input" class="flex-1 glass p-3 outline-none" placeholder="Type here...">
-            <button onclick="sendElemChat()" class="bg-blue-600 px-6 rounded-lg font-bold">SEND (ADS)</button>
+            <input id="elem-input" class="flex-1 glass bg-transparent p-4 outline-none border-blue-500/20" placeholder="Type message...">            <button onclick="sendElemMsg()" class="bg-blue-600 px-6 rounded-2xl font-bold">SEND</button>
         </div>
-    </div>
+    </section>
 
-    <!-- HIGHSCHOOL PAGE -->
-    <div id="page-high" class="hidden max-w-4xl mx-auto">
-        <button onclick="showPage('page-main')" class="mb-4 text-sm"><i class="fa fa-arrow-left"></i> Back</button>
-        <div class="grid grid-cols-3 gap-2 mb-4">
-            <div class="h-24 glass flex items-center justify-center text-[10px] italic opacity-30">Ad Slot 1</div>
-            <div class="h-24 glass flex items-center justify-center text-[10px] italic opacity-30">Ad Slot 2</div>
-            <div class="h-24 glass flex items-center justify-center text-[10px] italic opacity-30">Ad Slot 3</div>
+    <!-- HIGHSCHOOL CHAT -->
+    <section id="page-high" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50"><i class="fa fa-chevron-left"></i> BACK</button>
+        <div id="hs-ad-box" class="grid grid-cols-3 gap-2 mb-4">
+             <div class="h-20 glass flex items-center justify-center text-[8px] opacity-20 italic">Ad Slot 1</div>
+             <div class="h-20 glass flex items-center justify-center text-[8px] opacity-20 italic">Ad Slot 2</div>
+             <div class="h-20 glass flex items-center justify-center text-[8px] opacity-20 italic">Ad Slot 3</div>
         </div>
-        <button id="hs-claim-btn" onclick="claimHighSchool()" class="w-full bg-green-600 p-4 rounded-xl font-bold mb-4 hidden">CLAIM ₱0.015 & SEND</button>
-        <input id="hs-input" class="w-full glass p-3 mb-4 outline-none" placeholder="Enter message first...">        <div class="glass h-64 overflow-y-auto p-4"><table class="w-full text-sm"><tbody id="hs-chat-content"></tbody></table></div>
-    </div>
+        <button id="hs-claim-btn" onclick="claimHS()" class="hidden w-full bg-green-600 p-4 rounded-2xl font-bold mb-4 animate-bounce text-sm">CLAIM ₱0.015 & SEND MESSAGE</button>
+        <div class="glass h-64 overflow-y-auto p-4 mb-4" id="hs-chat-content"></div>
+        <input id="hs-input" class="w-full glass bg-transparent p-4 outline-none" placeholder="Message for Highschool...">
+    </section>
 
-    <!-- LEADERBOARD PAGE -->
-    <div id="page-leaderboard" class="hidden max-w-2xl mx-auto glass p-6">
-        <button onclick="showPage('page-main')" class="mb-4 text-sm">Back</button>
-        <h2 class="text-xl font-bold mb-4 text-yellow-500 italic">TOP 500 EARNERS</h2>
-        <div class="overflow-y-auto h-96">
-            <table class="w-full text-left">
-                <thead class="sticky top-0 bg-slate-900"><tr><th class="p-2">Rank</th><th>User</th><th>Earned</th></tr></thead>
-                <tbody id="leaderboard-list"></tbody>
-            </table>
-        </div>
-    </div>
-
-    <!-- DAILY LOGIN PAGE -->
-    <div id="page-daily" class="hidden max-w-xl mx-auto glass p-6">
-        <button onclick="showPage('page-main')" class="mb-4 text-sm">Back</button>
-        <h2 class="text-xl font-bold mb-6 italic">DAILY TASKS</h2>
-        <div class="space-y-4">
-            <div class="p-4 glass border-l-4 border-blue-500">
-                <p class="text-sm font-bold">Task 1: Join & Register</p>
-                <button onclick="runDailyTask(1)" id="task1-btn" class="mt-2 bg-blue-600 px-4 py-2 rounded text-xs">START (₱0.01)</button>
-            </div>
-            <div class="p-4 glass border-l-4 border-purple-500">
-                <p class="text-sm font-bold">Task 2: Join & Register</p>
-                <button onclick="runDailyTask(2)" id="task2-btn" class="mt-2 bg-purple-600 px-4 py-2 rounded text-xs">START (₱0.01)</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- WITHDRAW PAGE -->
-    <div id="page-withdraw" class="hidden max-w-xl mx-auto glass p-6">
-        <button onclick="showPage('page-main')" class="mb-4 text-sm">Back</button>
-        <input id="wd-amount" type="number" class="w-full glass p-4 mb-4" placeholder="Amount (Min 0.015)">
-        <input id="wd-number" type="text" class="w-full glass p-4 mb-4" placeholder="GCash Number">
-        <button onclick="submitWithdraw()" class="w-full bg-red-600 p-4 rounded-xl font-bold">REQUEST WITHDRAWAL</button>
-        <h3 class="mt-6 text-xs uppercase opacity-50">Live History</h3>
-        <div id="wd-history" class="text-[10px] mt-2"></div>
-    </div>
-
-    <!-- OWNER PAGE -->
-    <div id="page-owner" class="hidden max-w-4xl mx-auto glass p-6">
-        <div id="owner-auth">
-            <input id="owner-pass" type="password" class="glass p-3 w-full mb-4" placeholder="Password">
-            <button onclick="loginOwner()" class="bg-white text-black px-6 py-2 rounded">Login</button>
-        </div>
-        <div id="owner-panel" class="hidden">
-            <h2 class="text-xl font-bold mb-4">OWNER PANEL</h2>
-            <div class="overflow-x-auto">
-                <table class="w-full text-xs text-left">
-                    <thead><tr><th>User</th><th>Amount</th><th>GCash</th><th>Date</th><th>Action</th></tr></thead>
-                    <tbody id="owner-wd-list"></tbody>
+    <!-- LEADERBOARD -->
+    <section id="page-leaderboard" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50">BACK</button>
+        <div class="glass p-6">
+            <h2 class="font-black text-xl text-yellow-500 mb-4 italic">TOP 500 EARNERS</h2>
+            <div class="h-96 overflow-y-auto text-sm">
+                <table class="w-full text-left">
+                    <tbody id="leaderboard-list"></tbody>
                 </table>
             </div>
         </div>
-    </div>
+    </section>
 
-    <!-- UPDATED LINKS ADMIN (MODAL) -->
-    <div id="page-admin-links" class="hidden max-w-xl mx-auto glass p-6">
-        <h2 class="font-bold mb-4 text-orange-400">UPDATE DAILY LINKS</h2>
-        <input id="link1-input" class="w-full glass p-2 mb-2 text-xs" placeholder="Link 1">
-        <input id="link2-input" class="w-full glass p-2 mb-4 text-xs" placeholder="Link 2">
-        <button onclick="saveLinks()" class="bg-orange-600 px-4 py-2 rounded">UPDATE LIVE</button>
-        <button onclick="showPage('page-main')" class="ml-2">Cancel</button>
-    </div>
+    <!-- DAILY LOGIN -->
+    <section id="page-daily" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50">BACK</button>
+        <div class="space-y-4">
+            <div class="glass p-6 border-l-4 border-blue-500">
+                <h3 class="font-bold mb-1">Task 1: Register & Earn</h3>
+                <p class="text-[10px] opacity-50 mb-4">Redirect -> 9s Wait -> Reward</p>
+                <button onclick="dailyTask(1)" id="d-btn-1" class="w-full bg-blue-600 p-3 rounded-xl font-bold text-xs">START TASK 1 (₱0.01)</button>
+            </div>
+            <div class="glass p-6 border-l-4 border-purple-500">
+                <h3 class="font-bold mb-1">Task 2: Register & Earn</h3>
+                <p class="text-[10px] opacity-50 mb-4">Redirect -> 9s Wait -> Reward</p>
+                <button onclick="dailyTask(2)" id="d-btn-2" class="w-full bg-purple-600 p-3 rounded-xl font-bold text-xs">START TASK 2 (₱0.01)</button>
+            </div>
+        </div>
+    </section>
 
-    <!-- Firebase SDKs -->
+    <!-- REFERRALS -->
+    <section id="page-referral" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50">BACK</button>
+        <div class="glass p-6 mb-4">
+            <p class="text-[10px] uppercase opacity-50">Your Referral Code</p>
+            <div class="flex justify-between items-center bg-white/5 p-4 rounded-xl mt-2">
+                <span id="ref-code-display" class="font-mono font-bold">...</span>
+                <button onclick="copyRef()" class="text-xs bg-white/10 px-3 py-1 rounded">COPY</button>
+            </div>
+        </div>
+        <div class="glass p-6">
+            <p class="text-center text-xs opacity-50 mb-4 uppercase">Sync Invite Code (8% Bonus)</p>
+            <input id="ref-input" class="w-full glass bg-transparent p-4 mb-4 text-center" placeholder="Paste Code Here">
+            <button onclick="syncRef()" class="w-full bg-pink-600 p-4 rounded-xl font-bold">ACTIVATE BONUS</button>
+        </div>
+    </section>
+
+    <!-- WITHDRAW -->
+    <section id="page-withdraw" class="hidden">
+        <button onclick="nav('main-menu')" class="mb-4 text-xs opacity-50">BACK</button>
+        <div class="glass p-6">
+            <input id="wd-amt" type="number" class="w-full glass bg-transparent p-4 mb-4" placeholder="Amount (Min 0.015)">
+            <input id="wd-num" type="text" class="w-full glass bg-transparent p-4 mb-4" placeholder="GCash Number">
+            <button onclick="submitWithdraw()" class="w-full bg-red-600 p-4 rounded-xl font-bold">WITHDRAW VIA GCASH</button>
+        </div>
+        <div class="mt-6">
+            <h3 class="text-xs font-bold uppercase mb-2 px-2">Live Status Updates</h3>
+            <div id="wd-history" class="space-y-2"></div>
+        </div>
+    </section>
+
+    <!-- OWNER DASHBOARD -->
+    <section id="page-owner" class="hidden">
+        <div id="owner-login" class="glass p-10 text-center">
+            <input id="owner-pass" type="password" class="w-full glass bg-transparent p-4 mb-4" placeholder="Enter Password">
+            <button onclick="authOwner()" class="bg-white text-black px-10 py-2 rounded-full font-bold">LOGIN</button>
+        </div>
+        <div id="owner-panel" class="hidden glass p-4 overflow-x-auto">
+            <h2 class="font-bold mb-4">PENDING WITHDRAWALS</h2>
+            <table class="w-full text-[10px] text-left">
+                <thead><tr class="opacity-50 border-b border-white/10"><th>USER</th><th>AMT</th><th>GCASH</th><th>ACTION</th></tr></thead>
+                <tbody id="owner-list"></tbody>
+            </table>
+        </div>
+    </section>
+
+    <!-- ADMIN LINKS MODAL -->
+    <section id="page-admin-links" class="hidden glass p-6">
+        <h2 class="font-bold mb-4">UPDATE LIVE LINKS</h2>
+        <input id="link1-in" class="w-full glass bg-transparent p-3 mb-2 text-xs" placeholder="Daily Link 1">
+        <input id="link2-in" class="w-full glass bg-transparent p-3 mb-4 text-xs" placeholder="Daily Link 2">
+        <button onclick="saveLinks()" class="w-full bg-orange-600 p-3 rounded-xl font-bold">SAVE LIVE</button>
+    </section>
+
     <script type="module" src="app.js"></script>
 </body>
 </html>
