--- a/index.html
+++ b/index.html
@@ -2,101 +2,149 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>🎖🤑PAPERHOUSE INC ADS🤑🎖</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Monetag SDK -->
     <script src='//libtl.com/sdk.js' data-zone='10276123' data-sdk='show_10276123'></script>
     <style>
-        body { background: #0f172a; color: white; font-family: 'Segoe UI', sans-serif; overflow-x: hidden; }
-        .glass { background: rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); }
-        .active-tab { color: #22c55e; border-bottom: 3px solid #22c55e; }
-        .ad-card { background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); transition: transform 0.2s; }
-        .ad-card:active { transform: scale(0.95); }
-        #app { padding-bottom: 80px; }
+        body { background: #020617; color: #e2e8f0; font-family: 'Inter', sans-serif; }
+        .gold-gradient { background: linear-gradient(135deg, #fbbf24 0%, #d97706 100%); }
+        .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        .nav-active { color: #fbbf24; border-bottom: 2px solid #fbbf24; }
+        .cooldown-active { filter: grayscale(1); pointer-events: none; opacity: 0.5; }
+        #ad-timer { font-variant-numeric: tabular-nums; }
     </style>
 </head>
-<body>
+<body class="select-none">
 
-    <div id="login-screen" class="fixed inset-0 z-50 bg-slate-900 flex flex-col items-center justify-center p-6">
-        <h1 class="text-2xl font-bold mb-6 text-green-400 text-center">🎖🤑PAPERHOUSE INC ADS🤑🎖</h1>
-        <input type="text" id="username" placeholder="Enter Nickname" class="w-full p-4 rounded-xl bg-slate-800 border border-slate-700 mb-4">
-        <input type="number" id="gcash-num" placeholder="GCash Number (09...)" class="w-full p-4 rounded-xl bg-slate-800 border border-slate-700 mb-6">
-        <button onclick="app.register()" class="w-full bg-green-500 py-4 rounded-xl font-bold text-lg">START EARNING</button>
+    <!-- Login/Onboarding -->
+    <div id="login-screen" class="fixed inset-0 z-[100] bg-slate-950 flex flex-col items-center justify-center p-8">
+        <div class="text-6xl mb-6">🎖</div>
+        <h1 class="text-2xl font-black text-center mb-2 uppercase tracking-tighter">Paperhouse Inc Ads</h1>
+        <p class="text-slate-400 text-sm mb-8">Premium GCash Rewards System</p>
+        <input type="text" id="reg-name" placeholder="Username" class="w-full p-4 rounded-2xl bg-slate-900 border border-slate-800 mb-4 focus:outline-none focus:border-yellow-500">
+        <input type="number" id="reg-gcash" placeholder="GCash Number (09...)" class="w-full p-4 rounded-2xl bg-slate-900 border border-slate-800 mb-6 focus:outline-none focus:border-yellow-500">
+        <button onclick="app.register()" class="w-full gold-gradient py-4 rounded-2xl font-bold text-slate-900 shadow-lg shadow-yellow-500/20">ENTER DASHBOARD</button>
     </div>
 
-    <div id="app" class="hidden">
-        <!-- Header -->
-        <header class="p-4 glass flex justify-between items-center sticky top-0 z-40">
+    <!-- Main App -->
+    <div id="app" class="hidden min-h-screen pb-24">
+        <!-- Top Bar -->
+        <header class="p-5 flex justify-between items-center sticky top-0 z-40 glass">
             <div>
-                <p class="text-xs text-slate-400">Welcome,</p>
-                <h2 id="display-name" class="font-bold text-green-400 text-lg">User</h2>
+                <h2 id="user-display" class="font-bold text-white">---</h2>
+                <p class="text-[10px] text-yellow-500 font-bold uppercase tracking-widest">Premium Member</p>
             </div>
             <div class="text-right">
-                <p class="text-xs text-slate-400">Balance</p>
-                <h2 id="display-balance" class="font-bold text-yellow-400 text-lg">₱0.00</h2>
+
+                <p class="text-[10px] text-slate-400 uppercase font-bold">Balance</p>
+                <h2 id="balance-display" class="text-xl font-black text-white">₱0.00</h2>
             </div>
         </header>
 
-        <!-- Main Content -->
-        <main class="p-4">
-            <!-- Home Section -->
+        <main class="p-4 space-y-6">
+            <!-- Stats Cards -->
             <section id="sec-home" class="space-y-4">
-                <div class="glass p-6 rounded-3xl text-center">
-
-                    <p class="text-slate-400 mb-2">Total Earnings</p>
-                    <h1 id="main-balance" class="text-5xl font-black text-white mb-4">₱0.00</h1>
-                    <button onclick="app.showWithdrawModal()" class="bg-green-600 px-8 py-2 rounded-full font-bold">WITHDRAW</button>
+                <div class="glass rounded-[2rem] p-8 text-center relative overflow-hidden">
+                    <div class="absolute top-0 right-0 p-4 opacity-10"><i class="fas fa-wallet text-6xl"></i></div>
+                    <p class="text-slate-400 text-sm mb-1">Available to Withdraw</p>
+                    <h1 id="big-balance" class="text-5xl font-black text-white mb-6">₱0.00</h1>
+                    <div id="cooldown-box" class="hidden mb-4 text-xs font-bold text-yellow-500 bg-yellow-500/10 py-2 rounded-full">
+                        NEXT AD IN: <span id="ad-timer">30</span>s
+                    </div>
+                    <button onclick="app.requestWithdraw()" class="w-full py-3 rounded-xl bg-white text-black font-bold text-sm">CASH OUT NOW</button>
                 </div>
 
-                <h3 class="font-bold text-slate-300 mt-6">EARN REWARDS</h3>
-                <div class="grid grid-cols-2 gap-4">
-                    <div onclick="app.watchAd('interstitial')" class="ad-card p-6 rounded-2xl text-center border border-green-500/30">
-                        <i class="fas fa-play-circle text-3xl text-green-400 mb-2"></i>
-                        <p class="font-bold">Fast Ad</p>
-                        <p class="text-xs text-slate-400">₱0.01 Reward</p>
+                <!-- Ad Buttons -->
+                <div class="grid grid-cols-2 gap-4" id="ad-container">
+                    <button onclick="app.playAd('inter')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
+                        <div class="w-12 h-12 rounded-full bg-blue-500/20 flex items-center justify-center mb-3">
+                            <i class="fas fa-bolt text-blue-400 text-xl"></i>
+                        </div>
+                        <span class="font-bold text-sm">Turbo Ad</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.01</span>
+                    </button>
+                    <button onclick="app.playAd('pop')" class="ad-btn glass p-6 rounded-3xl flex flex-col items-center hover:bg-slate-800 transition">
+                        <div class="w-12 h-12 rounded-full bg-purple-500/20 flex items-center justify-center mb-3">
+                            <i class="fas fa-rocket text-purple-400 text-xl"></i>
+                        </div>
+                        <span class="font-bold text-sm">Premium Ad</span>
+                        <span class="text-[10px] text-slate-500">Earn ₱0.01</span>
+                    </button>
+                </div>
+            </section>
+
+            <!-- Referrals Section -->
+            <section id="sec-referral" class="hidden space-y-4">
+                <div class="gold-gradient p-6 rounded-3xl text-slate-900">
+                    <h3 class="font-black text-xl mb-1">Affiliate Program</h3>
+                    <p class="text-sm font-medium opacity-80">Earn 8% lifetime commission from every ad your friends watch.</p>
+                </div>
+                <div class="glass p-5 rounded-2xl">
+                    <p class="text-xs text-slate-400 mb-2 font-bold uppercase">Your Referral Link</p>
+                    <div class="flex gap-2">
+                        <input id="ref-link" readonly class="flex-1 bg-slate-900/50 p-3 rounded-lg text-xs border border-white/5 text-slate-300">
+                        <button onclick="app.copyRef()" class="bg-white text-black px-4 rounded-lg font-bold text-xs">COPY</button>
                     </div>
-                    <div onclick="app.watchAd('pop')" class="ad-card p-6 rounded-2xl text-center border border-blue-500/30">
-                        <i class="fas fa-ad text-3xl text-blue-400 mb-2"></i>
-                        <p class="font-bold">Pop Ad</p>
-                        <p class="text-xs text-slate-400">₱0.01 Reward</p>
+                </div>
+                <div class="grid grid-cols-2 gap-4">
+                    <div class="glass p-4 rounded-2xl text-center">
+                        <p class="text-[10px] text-slate-400">Total Referrals</p>
+                        <p id="ref-count" class="text-xl font-bold">0</p>
+                    </div>
+                    <div class="gl
+
+ass p-4 rounded-2xl text-center">
+                        <p class="text-[10px] text-slate-400">Total Commissions</p>
+                        <p id="ref-earnings" class="text-xl font-bold text-green-400">₱0.00</p>
                     </div>
                 </div>
             </section>
 
-            <!-- Leaderboard Section -->
-            <section id="sec-leaderboard" class="hidden">
-                <h2 class="text-xl font-bold mb-4">Top Earners</h2>
+            <!-- History Section -->
+            <section id="sec-history" class="hidden space-y-4">
+                <h3 class="font-bold text-lg">Withdrawal History</h3>
+                <div id="history-list" class="space-y-3">
+                    <p class="text-center text-slate-500 py-10">No history found.</p>
+                </div>
+            </section>
+
+            <!-- Leaderboard -->
+            <section id="sec-leaderboard" class="hidden space-y-3">
+                <h3 class="font-bold text-lg">Global Ranking</h3>
                 <div id="leaderboard-list" class="space-y-2"></div>
             </section>
 
-            <!-- Chat Section -->
-            <section id="sec-chat" class="hidden flex flex-col h-[70vh]">
-                <div id="chat-box" class="flex-1 overflow-y-auto space-y-3 mb-4 p-2"></div>
-                <div class="flex gap-2">
-                    <input type="text" id="chat-input" placeholder="Type a message..." class="flex-1 p-3 rounded-xl bg-slate-800 border border-slate-700">
-                    <button onclick="app.sendMessage()" class="bg-green-500 p-3 rounded-xl"><i class="fas fa-paper-plane"></i></button>
+            <!-- Chat Room -->
+            <section id="sec-chat" class="hidden flex flex-col h-[65vh]">
+                <div id="chat-box" class="flex-1 overflow-y-auto space-y-4 mb-4 pr-2"></div>
+                <div class="flex gap-2 p-2 glass rounded-2xl">
+                    <input type="text" id="chat-input" placeholder="Say something..." class="flex-1 bg-transparent p-2 focus:outline-none text-sm">
+                    <button onclick="app.sendMessage()" class="bg-yellow-500 text-black w-10 h-10 rounded-xl flex items-center justify-center">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
                 </div>
             </section>
 
             <!-- Admin Section -->
-            <section id="sec-admin" class="hidden">
-                <h2 class="text-xl font-bold mb-4 text-red-400">Admin Dashboard</h2>
-                <div id="admin-withdrawals" class="space-y-4"></div>
+            <section id="sec-admin" class="hidden space-y-4">
+                <h2 class="text-xl font-black text-red-500">PAYOUT MANAGEMENT</h2>
+                <div id="admin-list" class="space-y-4"></div>
             </section>
         </main>
 
-        <!-- Navigation -->
-        <nav class="fixed bottom-0 left-0 right-0 glass flex justify-around p-4 border-t border-white/10">
-            <button onclick="app.nav('home')" class="nav-btn active-tab"><i class="fas fa-home text-xl"></i></button>
-            <button onclick="app.nav('chat')" class="nav-btn"><i class="fas fa-comments text-xl"></i></button>
-            <button onclick="app.nav('leaderboard')" class="nav-btn"><i class="fas fa-trophy text-xl"></i></button>
-            <button onclick="app.nav('admin')" class="nav-btn"><i class="fas fa-user-shield text-xl"></i></button>
+        <!-- Bottom Navigation -->
+        <nav class="fixed bottom-0 left-0 right-0 glass border-t border-white/5 flex justify-around items-center p-3 z-50">
+            <button onclick="app.nav('home')" class="nav-btn nav-active flex flex-col items-center"><i class="fas fa-home mb-1"></i><span class="text-[9px]">Home</span></button>
+            <button onclick="app.nav('referral')" class="nav-btn flex flex-col items-center"><i class="fas fa-users mb-1"></i><span class="text-[9px]">Refer</span></button>
+            <button onclick="app.nav('chat')" class="nav-btn flex flex-col items-center"><i class="fas fa-comment-dots mb-1"></i><span class="text-[9px]">Chat</span></button>
+            <button onclick="app.nav('history')" class="nav-btn flex flex-col items-center"><i class="fas fa-clock-rotate-left mb-1"></i><span class="text-[9px]">History</span></button>
+            <button onclick="app.nav('admin')" class="nav-btn flex flex-col items-center text-slate-600"><i class="fas fa-user-shield mb-1"></i><span class="text-[9px]">Admin</span></button>
         </nav>
     </div>
 
-    <!-- Firebase SDKs -->
     <script type="module" src="app.js"></script>
 </body>
 </html>
